[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/sprites - items/tile_0112.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites - items/tile_0111.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites - items/tile_0131.png" type="Texture" id=3]
[ext_resource path="res://Flag.gd" type="Script" id=4]
[ext_resource path="res://assets/sounds/Fanfare.ogg" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=4]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 1 ) ],
"loop": true,
"name": "wave",
"speed": 8.0
} ]

[sub_resource type="Animation" id=3]
resource_name = "Flag_Rise"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 2.5, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -18 ), Vector2( 0, -36 ), Vector2( 0, -54 ), Vector2( 0, -72 ), Vector2( 0, -90 ), Vector2( 0, -90 ) ]
}

[node name="Flag" type="Area2D"]
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "wave"
playing = true

[node name="Sprite" type="Sprite" parent="AnimatedSprite"]
position = Vector2( 0, 18 )
texture = ExtResource( 3 )

[node name="Sprite2" type="Sprite" parent="AnimatedSprite"]
position = Vector2( 0, 36 )
texture = ExtResource( 3 )

[node name="Sprite3" type="Sprite" parent="AnimatedSprite"]
position = Vector2( 0, 54 )
texture = ExtResource( 3 )

[node name="Sprite4" type="Sprite" parent="AnimatedSprite"]
position = Vector2( 0, 72 )
texture = ExtResource( 3 )

[node name="Sprite5" type="Sprite" parent="AnimatedSprite"]
position = Vector2( 0, 90 )
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Flag_Rise = SubResource( 3 )

[node name="FanfareSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -16.0

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_started"]
